--- a/translatation/translation.ipynb
+++ b/translatation/translation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "251552ad",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "efebc590",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "id": "bb35a81a",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "id": "13aa2057",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "id": "cae75e04",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "id": "11ecc29b",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "209eb91c",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "d78c2e90",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "38e13254",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "00983a43",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
     "num_decoder_layers = 3\n",
     "dropout = 0.10\n",
     "max_len = 100\n",
-    "forward_expansion = 4\n",
+    "forward_expansion = 2048\n",
     "src_pad_idx = english.vocab.stoi[\"<pad>\"]\n",
     "\n",
     "# Tensorboard to get nice loss plot\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "30b1667a",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -271,9 +271,24 @@
       "[Epoch 0 / 5]\n",
       "=> Saving checkpoint\n",
       "Translated example sentence: \n",
-      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'bridge', '.', '<eos>']\n",
-      "torch.Size([46, 64])\n",
-      "torch.Size([40, 64])\n"
+      " ['crystal', 'stone', 'holidays', 'soaked', 'soaked', 'soaked', 'soaked', 'soaked', 'soaked', 'soaked', 'soaked', 'soaked', 'window', 'soaked', 'soaked', 'window', 'soaked', 'soaked', 'window', 'soaked', 'soaked', 'soaked', 'soaked', 'soaked', 'window', 'holidays', 'soaked', 'euro', 'cash', 'holidays', 'stone', 'hammer', 'moment', 'stone', 'holidays', 'soaked', 'bystanders', 'soaked', 'soaked', 'holidays', 'soaked', 'stone', 'holidays', 'soaked', 'soaked', 'papers', 'soaked', 'soaked', 'window', 'soaked']\n",
+      "[Epoch 1 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'brown', 'and', 'a', 'crowd', 'is', 'walking', 'next', 'to', 'a', 'water', '.', '<eos>']\n",
+      "[Epoch 2 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'is', 'walking', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 3 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'walks', 'under', 'a', 'bridge', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "[Epoch 4 / 5]\n",
+      "=> Saving checkpoint\n",
+      "Translated example sentence: \n",
+      " ['a', 'horse', 'is', 'walking', 'under', 'a', 'boat', 'next', 'to', 'a', 'boat', '.', '<eos>']\n",
+      "Bleu score 27.95\n"
      ]
     }
    ],
@@ -327,6 +342,14 @@
     "score = bleu(test_data[1:100], model, german, english, device)\n",
     "print(f\"Bleu score {score * 100:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77f51841",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
